[package]
name = "engine"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
cfg-if = "1.0.0"

[target.'cfg(windows)'.dependencies.windows]
version = "0.48.0"
features = [
    "Win32_Foundation",
]

[target.'cfg(target_os = "linux")'.dependencies]
breadx = "3.1.0"